added description to the data, and added panel to the establishment profile

--- a/kritik_version_2023/pubspec.yaml
+++ b/kritik_version_2023/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9
   flutter_svg_provider: ^1.0.6
+  sliding_up_panel: ^2.0.0+1
+
 
 dev_dependencies:
   flutter_test:
