--- a/kritik_version_2023/pubspec.yaml
+++ b/kritik_version_2023/pubspec.yaml
@@ -38,11 +38,16 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_svg_provider: ^1.0.6
   sliding_up_panel: ^2.0.0+1
+  hive: any
+  hive_flutter: any
 
 
 dev_dependencies:
+  hive_generator: any
+  build_runner: any
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
