--- a/kritik_version_2023/pubspec.yaml
+++ b/kritik_version_2023/pubspec.yaml
@@ -38,8 +38,9 @@ dependencies:
   flutter_svg: ^2.0.9
   flutter_svg_provider: ^1.0.6
   sliding_up_panel: ^2.0.0+1
-  hive: any
-  hive_flutter: any
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.15
 
 
 dev_dependencies:
